tests/e2e/type_cast_as_invalid.error
Error: syntax error in story at line 1, column 5

1|    a = [] to Map[string,string]
          ^^^^^^^^^^^^^^^^^^^^^^^

E0126: Type casting not supported from `List[any]` to `Map[string,string]`.
